compiler/src/compile/ir/snapshots/compiler__compile__ir__ssa__test__ssa_generation_tests@if.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir/ssa.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/ir/snapshot_tests/ssa/if.tapir
---
=======================
fn @toplevel() -> 

---- block 3 ----
temp.9 = int 5
x.10 = temp.9
temp.11 = bool true
temp.12 = bool true
temp.13 = temp.11 == temp.12
conditional_jump temp.13 0 1

---- block 0 ----
temp.14 = int 8
x.15 = temp.14
jmp 2

---- block 1 ----
temp.16 = int 9
x.17 = temp.16
jmp 2

---- block 2 ----
x.18 = φ(x.15 from 0, x.17 from 1)
temp.19 = x.18
y.20 = temp.19
return
