compiler/src/compile/ir/snapshots/compiler__compile__ir__ssa__test__ssa_generation_tests@loop_break.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir/ssa.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/ir/snapshot_tests/ssa/loop_break.tapir
---
=======================
fn @toplevel() -> 

---- block 2 ----
temp.8 = int 0
i.9 = temp.8
jmp 0

---- block 0 ----
i.10 = φ(i.9 from 2, i.14 from 5)
temp.11 = i.10
temp.12 = int 1
temp.13 = temp.11 + temp.12
i.14 = temp.13
temp.15 = i.14
temp.16 = int 20
temp.17 = temp.15 > temp.16
conditional_jump temp.17 3 4

---- block 3 ----
jmp 1

---- block 4 ----
jmp 5

---- block 1 ----
return 

---- block 5 ----
jmp 0
