compiler/src/compile/ir/snapshots/compiler__compile__ir__ssa__test__ssa_generation_tests@overwrite_loop.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir/ssa.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/ir/snapshot_tests/ssa/overwrite_loop.tapir
---
=======================
fn @toplevel() -> 

---- block 2 ----
temp.5 = int 3
x.6 = temp.5
jmp 0

---- block 0 ----
x.7 = φ(x.6 from 2, x.11 from 5)
temp.8 = x.7
y.9 = temp.8
temp.10 = bool true
conditional_jump temp.10 3 4

---- block 3 ----
jmp 5

---- block 4 ----
jmp 5

---- block 5 ----
x.11 = φ(x.7 from 3, x.7 from 4)
jmp 0
