compiler/src/compile/ir/snapshots/compiler__compile__ir__ssa__test__ssa_generation_tests@straight_line.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir/ssa.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/ir/snapshot_tests/ssa/straight_line.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
x.1 = int 5
x.2 = int 7
return
